# meal-planner-backend

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20260204_000001_create_ingredients_table.rs  m20260402_000001_create_ingredients_table.rs  m20260403_000002_create_recipes_table.rs  m20260403_000003_create_recipe_items_table.rs  m20260403_000004_create_tags_table.rs  m20260403_000005_create_recipe_tags_table.rs  m20260416_000006_drop_recipe_tags_table.rs  m20260416_000007_create_ingredient_preps_table.rs  m20260416_000008_create_recipe_ingredients_table.rs
src/: db.rs  main.rs  setup.rs
src/api/: api.rs  ingredient.rs  mod.rs  recipe.rs  tag.rs
src/entity/: ingredient_preps.rs  ingredients.rs  mod.rs  prelude.rs  recipe_ingredients.rs  recipe_items.rs  recipe_tags.rs  recipes.rs  tags.rs
src/view/: ingredient.rs  ingredient_prep.rs  mod.rs  recipe.rs  recipe_item.rs  tag.rs
src/view/request/: ingredient.rs  ingredient_prep.rs  mod.rs  recipe.rs
src/view/response/: ingredient.rs  ingredient_prep.rs  mod.rs  recipe.rs  tag.rs
